--- a/CodeToWord/Views/ShellView.xaml
+++ b/CodeToWord/Views/ShellView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CodeToWord.Views"
         mc:Ignorable="d"
-        Title="ShellView" Height="450" Width="800" MinWidth="400" MinHeight="350">
+        Title="Code To Word" Height="600" Width="600" MinHeight="350" MinWidth="400" Background="AliceBlue">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
