--- a/CodeToWord/Views/MainView.xaml
+++ b/CodeToWord/Views/MainView.xaml
@@ -33,7 +33,7 @@
                  x:Name="CodeText" HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Auto"
                  ScrollViewer.VerticalScrollBarVisibility="Auto" 
-                 Margin="0 0 0 20"/>
+                 Margin="0 0 0 20" FontFamily="Consolas"/>
         
         <!-- Row 3 -->
         <DockPanel Grid.Column="1" Grid.Row="2" MaxWidth="600"
